# Quick

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: QuickBison.cmake  QuickFlex.cmake  QuickGTest.cmake  QuickLLVM.cmake  QuickPython.cmake
include/AST/: AST.hpp  ASTNodes.def  ASTVisitor.hpp  Location.hpp
include/CodeGen/: ClassCodeGen.hpp  ExprCodeGen.hpp  FnCodeGen.hpp  IRType.hpp
include/Compiler/: JITEngine.hpp  Object.hpp  Pipeline.hpp
include/Env/: Environment.hpp
include/Parser/: Driver.hpp
include/Runtime/: Runtime.hpp
include/Sema/: ClassVerifier.hpp  QType.hpp  QTypeDB.hpp  SemaVerifier.hpp  StmtVerifier.hpp  TypeChecker.hpp
include/Utils/: Json.hpp  Logger.hpp  PrintVisitor.hpp  Status.hpp  Utils.hpp
lib/: CMakeLists.txt
lib/AST/: AST.cpp  CMakeLists.txt
lib/Apps/: CMakeLists.txt  qk.cpp
lib/CodeGen/: CMakeLists.txt  ClassCodeGen.cpp  ExprCodeGen.cpp  FnCodeGen.cpp
lib/CodeGen/Type/: CMakeLists.txt  IRType.cpp
lib/Compiler/: CMakeLists.txt  Compiler.cpp  JITEngine.cpp
lib/Env/: CMakeLists.txt  Environment.cpp
lib/Parser/: CMakeLists.txt  Driver.cpp  Lexer.lpp  Parser.ypp
lib/Runtime/: CMakeLists.txt  Runtime.cpp
lib/Sema/: CMakeLists.txt  ClassVerifier.cpp  SemaVerifier.cpp  StmtVerifier.cpp
lib/Sema/Type/: CMakeLists.txt  QType.cpp  QTypeDB.cpp
lib/Sema/TypeChecker/: CMakeLists.txt  TypeChecker.cpp
lib/Utils/: CMakeLists.txt  Json.cpp  Logger.cpp  PrintVisitor.cpp  Utils.cpp
test/: CMakeLists.txt
test/gtest/: CMakeLists.txt
test/gtest/AST/: ASTNodeDownCastTest.cpp  ASTNode_test.cpp  CMakeLists.txt
test/gtest/Sema/: CMakeLists.txt  TypeCheckerTest.cpp
test/lit/: .lit_test_times.txt  CMakeLists.txt  lit.cfg.py  lit.site.cfg.py  lit.site.cfg.py.in  quick-lit.py
test/lit/builtin_type/nothing/: nothing.qk  nothing_eq.qk  nothing_eq_obj.qk
test/lit/builtin_type/object/: object.qk
test/lit/builtin_type/string/: string.qk  string_concat.qk  string_eq.qk
test/lit/class/: class.qk  class_inheritance_method.qk  class_method.qk  class_method_override.qk  inheritance_members.qk
test/lit/comp_stmt/: environment.qk
test/lit/lowest_common_ancestor/: t1.qk  t2.qk
test/lit/precedence/: t1.qk  t2.qk
test/lit/single_stmt/: while_stmt.qk
test/lit/single_stmt/assign/: assignment_stmt.qk  vardecl_stmt.qk
test/lit/single_stmt/binop_float/: binop_stmt_add.qk  binop_stmt_div.qk  binop_stmt_equal.qk  binop_stmt_less.qk  binop_stmt_less_equal.qk  binop_stmt_more.qk  binop_stmt_more_equal.qk  binop_stmt_mul.qk  binop_stmt_not_equal.qk
test/lit/single_stmt/binop_integer/: binop_stmt_add.qk  binop_stmt_div.qk  binop_stmt_equal.qk  binop_stmt_less.qk  binop_stmt_less_equal.qk  binop_stmt_mod.qk  binop_stmt_more.qk  binop_stmt_more_equal.qk  binop_stmt_mul.qk  binop_stmt_not_equal.qk
test/lit/single_stmt/if/: if_elif_else_stmt.qk  if_elif_else_stmt2.qk  if_else_stmt.qk  if_stmt.qk
test/lit/single_stmt/unop/: unop_stmt_neg.qk  unop_stmt_not.qk
test/lit/small_program/: boxed_int.qk
test/lit/typecase/: t1.qk  tc_if.qk
